# Fast_translator

./: .gitignore  CMakeLists.txt  CMakeLists_deb.txt  LICENSE  README.md  build_deb.sh  build_native.sh
scripts/: install_dependencies.sh
src/: gui_main.cpp  language_graph.cpp  language_graph.h  main.cpp  ollama.cpp  ollama.h  response_processor.cpp  response_processor.h  role_manager.cpp  role_manager.h  tokenizer.h  tokenizer_bpe.cpp  tokenizer_bpe.h  tokenizer_sp.h  translation.cpp  translation.h  utils.cpp  utils.h
